--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <configuration>
+                    <project>mutant-test-api</project>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
