working version with basic integration tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-base_url:http://localhost:
+base_url=https://mutant-test-api.appspot.com
+database=mysql
+spring.cloud.gcp.sql.instance-connection-name=mutant-test-api:us-central1:mutant-test-api-database
+spring.cloud.gcp.sql.database-name=mutant_test_database
+spring.datasource.password=juli0304
+spring.cloud.gcp.project-id=mutant-test-api
+spring.jpa.hibernate.ddl-auto=create-drop
