final gatling tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 base_url=https://mutant-test-api.appspot.com
 database=mysql
+#it is not nice and also insecure not but for simplicity of the exercise I will leave here the database credentials
 spring.cloud.gcp.sql.instance-connection-name=mutant-test-api:us-central1:mutant-test-api-database
 spring.cloud.gcp.sql.database-name=mutant_test_database
 spring.datasource.password=juli0304
