--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.cloud.gcp.sql.database-name=mutant_test_database
 spring.datasource.password=juli0304
 spring.cloud.gcp.project-id=mutant-test-api
 spring.jpa.hibernate.ddl-auto=create-drop
+springdoc.swagger-ui.path=/api-doc.html
