--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>1.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
         <!-- Test-related dependencies. -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -111,6 +117,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- Plugin for google cloud-->
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
@@ -119,11 +126,13 @@
                     <project>mutant-test-api</project>
                 </configuration>
             </plugin>
+            <!-- Plugin for gatling-->
             <plugin>
                 <groupId>io.gatling</groupId>
                 <artifactId>gatling-maven-plugin</artifactId>
                 <version>3.0.5</version>
             </plugin>
+            <!-- Plugin for Scala compiling, as we have our gatling tests in Scala-->
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
